fix(cover): removed index from cover class, added button hover, fixed safari compatible word-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@
 }
 
 .cover {
-  z-index: -1;
+  /* z-index: -1; */
   position: relative;
   display: flex;
   flex-direction: column;
@@ -120,7 +120,8 @@
 }
 
 .cover__description-text {
-  word-spacing: 2cap;
+  /* before: 2cap, safari not support cap value */
+  word-spacing: 1em;
 }
 
 .aligned-text_center {
@@ -143,4 +144,9 @@
   font-size: 22px;
   font-weight: 400;
   text-transform: uppercase;
+  transition: 0.1s;
+}
+
+.cover__description .bet-button:hover {
+  background-color: rgba(7, 7, 7, 0.2);
 }
